--- a/assets/app.css
+++ b/assets/app.css
@@ -44,9 +44,10 @@ html,
   -moz-tab-size: 4;
   /* 3 */
   -o-tab-size: 4;
-     tab-size: 4;
+  tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -89,7 +90,7 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 
 abbr:where([title]) {
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
 }
 
 /*
@@ -135,7 +136,8 @@ code,
 kbd,
 samp,
 pre {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    'Liberation Mono', 'Courier New', monospace;
   /* 1 */
   font-feature-settings: normal;
   /* 2 */
@@ -376,14 +378,16 @@ textarea {
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
 
-input::-moz-placeholder, textarea::-moz-placeholder {
+input::-moz-placeholder,
+textarea::-moz-placeholder {
   opacity: 1;
   /* 1 */
   color: #9ca3af;
   /* 2 */
 }
 
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
   opacity: 1;
   /* 1 */
   color: #9ca3af;
@@ -403,7 +407,7 @@ Set the default cursor for buttons.
 */
 
 button,
-[role="button"] {
+[role='button'] {
   cursor: pointer;
 }
 
@@ -464,49 +468,49 @@ video {
 }
 
 h1,
-  .h1 {
+.h1 {
   font-size: 76.29px;
   /* font-size: calc(var(--font-heading-scale) * 3rem); */
 }
 
 @media only screen and (min-width: 750px) {
   h1,
-    .h1 {
+  .h1 {
     font-size: 76.29px;
     /* font-size: calc(var(--font-heading-scale) * 4rem); */
   }
 }
 
 h2,
-  .h2 {
+.h2 {
   font-size: 61.04px;
   /* font-size: calc(var(--font-heading-scale) * 2rem); */
 }
 
 @media only screen and (min-width: 750px) {
   h2,
-    .h2 {
+  .h2 {
     font-size: 61.04px;
     /* font-size: calc(var(--font-heading-scale) * 2.4rem); */
   }
 }
 
 h3,
-  .h3 {
+.h3 {
   font-size: 48.83px;
   /* font-size: calc(var(--font-heading-scale) * 1.7rem); */
 }
 
 @media only screen and (min-width: 750px) {
   h3,
-    .h3 {
+  .h3 {
     font-size: 48.83px;
     /* font-size: calc(var(--font-heading-scale) * 1.8rem); */
   }
 }
 
 h4,
-  .h4 {
+.h4 {
   font-family: var(--font-heading-family);
   font-style: var(--font-heading-style);
   font-size: 39.06px;
@@ -514,26 +518,26 @@ h4,
 }
 
 h5,
-  .h5 {
+.h5 {
   font-size: 31.25px;
   /* font-size: calc(var(--font-heading-scale) * 1.2rem); */
 }
 
 @media only screen and (min-width: 750px) {
   h5,
-    .h5 {
+  .h5 {
     font-size: 31.25px;
     /* font-size: calc(var(--font-heading-scale) * 1.3rem); */
   }
 }
 
 h6,
-  .h6 {
+.h6 {
   color: rgba(var(--color-foreground), 0.75);
   -webkit-margin-before: 1.67em;
-          margin-block-start: 1.67em;
+  margin-block-start: 1.67em;
   -webkit-margin-after: 1.67em;
-          margin-block-end: 1.67em;
+  margin-block-end: 1.67em;
 }
 
 body {
@@ -544,7 +548,9 @@ strong {
   font-family: CHANEY;
 }
 
-*, ::before, ::after {
+*,
+::before,
+::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -554,19 +560,19 @@ strong {
   --tw-skew-y: 0;
   --tw-scale-x: 1;
   --tw-scale-y: 1;
-  --tw-pan-x:  ;
-  --tw-pan-y:  ;
-  --tw-pinch-zoom:  ;
+  --tw-pan-x: ;
+  --tw-pan-y: ;
+  --tw-pinch-zoom: ;
   --tw-scroll-snap-strictness: proximity;
-  --tw-gradient-from-position:  ;
-  --tw-gradient-via-position:  ;
-  --tw-gradient-to-position:  ;
-  --tw-ordinal:  ;
-  --tw-slashed-zero:  ;
-  --tw-numeric-figure:  ;
-  --tw-numeric-spacing:  ;
-  --tw-numeric-fraction:  ;
-  --tw-ring-inset:  ;
+  --tw-gradient-from-position: ;
+  --tw-gradient-via-position: ;
+  --tw-gradient-to-position: ;
+  --tw-ordinal: ;
+  --tw-slashed-zero: ;
+  --tw-numeric-figure: ;
+  --tw-numeric-spacing: ;
+  --tw-numeric-fraction: ;
+  --tw-ring-inset: ;
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
   --tw-ring-color: rgb(59 130 246 / 0.5);
@@ -574,24 +580,24 @@ strong {
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
-  --tw-blur:  ;
-  --tw-brightness:  ;
-  --tw-contrast:  ;
-  --tw-grayscale:  ;
-  --tw-hue-rotate:  ;
-  --tw-invert:  ;
-  --tw-saturate:  ;
-  --tw-sepia:  ;
-  --tw-drop-shadow:  ;
-  --tw-backdrop-blur:  ;
-  --tw-backdrop-brightness:  ;
-  --tw-backdrop-contrast:  ;
-  --tw-backdrop-grayscale:  ;
-  --tw-backdrop-hue-rotate:  ;
-  --tw-backdrop-invert:  ;
-  --tw-backdrop-opacity:  ;
-  --tw-backdrop-saturate:  ;
-  --tw-backdrop-sepia:  ;
+  --tw-blur: ;
+  --tw-brightness: ;
+  --tw-contrast: ;
+  --tw-grayscale: ;
+  --tw-hue-rotate: ;
+  --tw-invert: ;
+  --tw-saturate: ;
+  --tw-sepia: ;
+  --tw-drop-shadow: ;
+  --tw-backdrop-blur: ;
+  --tw-backdrop-brightness: ;
+  --tw-backdrop-contrast: ;
+  --tw-backdrop-grayscale: ;
+  --tw-backdrop-hue-rotate: ;
+  --tw-backdrop-invert: ;
+  --tw-backdrop-opacity: ;
+  --tw-backdrop-saturate: ;
+  --tw-backdrop-sepia: ;
 }
 
 ::-webkit-backdrop {
@@ -604,19 +610,19 @@ strong {
   --tw-skew-y: 0;
   --tw-scale-x: 1;
   --tw-scale-y: 1;
-  --tw-pan-x:  ;
-  --tw-pan-y:  ;
-  --tw-pinch-zoom:  ;
+  --tw-pan-x: ;
+  --tw-pan-y: ;
+  --tw-pinch-zoom: ;
   --tw-scroll-snap-strictness: proximity;
-  --tw-gradient-from-position:  ;
-  --tw-gradient-via-position:  ;
-  --tw-gradient-to-position:  ;
-  --tw-ordinal:  ;
-  --tw-slashed-zero:  ;
-  --tw-numeric-figure:  ;
-  --tw-numeric-spacing:  ;
-  --tw-numeric-fraction:  ;
-  --tw-ring-inset:  ;
+  --tw-gradient-from-position: ;
+  --tw-gradient-via-position: ;
+  --tw-gradient-to-position: ;
+  --tw-ordinal: ;
+  --tw-slashed-zero: ;
+  --tw-numeric-figure: ;
+  --tw-numeric-spacing: ;
+  --tw-numeric-fraction: ;
+  --tw-ring-inset: ;
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
   --tw-ring-color: rgb(59 130 246 / 0.5);
@@ -624,24 +630,24 @@ strong {
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
-  --tw-blur:  ;
-  --tw-brightness:  ;
-  --tw-contrast:  ;
-  --tw-grayscale:  ;
-  --tw-hue-rotate:  ;
-  --tw-invert:  ;
-  --tw-saturate:  ;
-  --tw-sepia:  ;
-  --tw-drop-shadow:  ;
-  --tw-backdrop-blur:  ;
-  --tw-backdrop-brightness:  ;
-  --tw-backdrop-contrast:  ;
-  --tw-backdrop-grayscale:  ;
-  --tw-backdrop-hue-rotate:  ;
-  --tw-backdrop-invert:  ;
-  --tw-backdrop-opacity:  ;
-  --tw-backdrop-saturate:  ;
-  --tw-backdrop-sepia:  ;
+  --tw-blur: ;
+  --tw-brightness: ;
+  --tw-contrast: ;
+  --tw-grayscale: ;
+  --tw-hue-rotate: ;
+  --tw-invert: ;
+  --tw-saturate: ;
+  --tw-sepia: ;
+  --tw-drop-shadow: ;
+  --tw-backdrop-blur: ;
+  --tw-backdrop-brightness: ;
+  --tw-backdrop-contrast: ;
+  --tw-backdrop-grayscale: ;
+  --tw-backdrop-hue-rotate: ;
+  --tw-backdrop-invert: ;
+  --tw-backdrop-opacity: ;
+  --tw-backdrop-saturate: ;
+  --tw-backdrop-sepia: ;
 }
 
 ::backdrop {
@@ -654,19 +660,19 @@ strong {
   --tw-skew-y: 0;
   --tw-scale-x: 1;
   --tw-scale-y: 1;
-  --tw-pan-x:  ;
-  --tw-pan-y:  ;
-  --tw-pinch-zoom:  ;
+  --tw-pan-x: ;
+  --tw-pan-y: ;
+  --tw-pinch-zoom: ;
   --tw-scroll-snap-strictness: proximity;
-  --tw-gradient-from-position:  ;
-  --tw-gradient-via-position:  ;
-  --tw-gradient-to-position:  ;
-  --tw-ordinal:  ;
-  --tw-slashed-zero:  ;
-  --tw-numeric-figure:  ;
-  --tw-numeric-spacing:  ;
-  --tw-numeric-fraction:  ;
-  --tw-ring-inset:  ;
+  --tw-gradient-from-position: ;
+  --tw-gradient-via-position: ;
+  --tw-gradient-to-position: ;
+  --tw-ordinal: ;
+  --tw-slashed-zero: ;
+  --tw-numeric-figure: ;
+  --tw-numeric-spacing: ;
+  --tw-numeric-fraction: ;
+  --tw-ring-inset: ;
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
   --tw-ring-color: rgb(59 130 246 / 0.5);
@@ -674,24 +680,24 @@ strong {
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
-  --tw-blur:  ;
-  --tw-brightness:  ;
-  --tw-contrast:  ;
-  --tw-grayscale:  ;
-  --tw-hue-rotate:  ;
-  --tw-invert:  ;
-  --tw-saturate:  ;
-  --tw-sepia:  ;
-  --tw-drop-shadow:  ;
-  --tw-backdrop-blur:  ;
-  --tw-backdrop-brightness:  ;
-  --tw-backdrop-contrast:  ;
-  --tw-backdrop-grayscale:  ;
-  --tw-backdrop-hue-rotate:  ;
-  --tw-backdrop-invert:  ;
-  --tw-backdrop-opacity:  ;
-  --tw-backdrop-saturate:  ;
-  --tw-backdrop-sepia:  ;
+  --tw-blur: ;
+  --tw-brightness: ;
+  --tw-contrast: ;
+  --tw-grayscale: ;
+  --tw-hue-rotate: ;
+  --tw-invert: ;
+  --tw-saturate: ;
+  --tw-sepia: ;
+  --tw-drop-shadow: ;
+  --tw-backdrop-blur: ;
+  --tw-backdrop-brightness: ;
+  --tw-backdrop-contrast: ;
+  --tw-backdrop-grayscale: ;
+  --tw-backdrop-hue-rotate: ;
+  --tw-backdrop-invert: ;
+  --tw-backdrop-opacity: ;
+  --tw-backdrop-saturate: ;
+  --tw-backdrop-sepia: ;
 }
 
 .twcss-absolute {
@@ -702,13 +708,74 @@ strong {
   position: relative;
 }
 
+.twcss-sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
+
 .twcss-inset-0 {
   inset: 0px;
+}
+
+.twcss-top-0 {
+  top: 0px;
+}
+
+.twcss-top-4 {
+  top: 1rem;
+}
+
+.twcss-top-8 {
+  top: 2rem;
+}
+
+.twcss-col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
+.twcss-col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
+.twcss-col-span-6 {
+  grid-column: span 6 / span 6;
+}
+
+.twcss-col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
+.twcss-col-span-8 {
+  grid-column: span 8 / span 8;
+}
+
+.twcss-col-span-9 {
+  grid-column: span 9 / span 9;
 }
 
 .twcss-my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.twcss-my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.twcss-my-80 {
+  margin-top: 20rem;
+  margin-bottom: 20rem;
+}
+
+.twcss-my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.twcss-my-40 {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
 .twcss-mb-32 {
@@ -735,6 +802,22 @@ strong {
   height: 100%;
 }
 
+.twcss-h-8 {
+  height: 2rem;
+}
+
+.twcss-h-80 {
+  height: 20rem;
+}
+
+.twcss-h-16 {
+  height: 4rem;
+}
+
+.twcss-h-96 {
+  height: 24rem;
+}
+
 .twcss-w-\[24\%\] {
   width: 24%;
 }
@@ -757,16 +840,40 @@ strong {
 
 .-twcss-rotate-2 {
   --tw-rotate: -2deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .twcss-rotate-2 {
   --tw-rotate: 2deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .twcss-grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.twcss-grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.twcss-grid-cols-8 {
+  grid-template-columns: repeat(8, minmax(0, 1fr));
+}
+
+.twcss-grid-cols-7 {
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
+.twcss-grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.twcss-grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .twcss-items-center {
@@ -777,8 +884,16 @@ strong {
   justify-content: center;
 }
 
+.twcss-justify-between {
+  justify-content: space-between;
+}
+
 .twcss-gap-10 {
   gap: 2.5rem;
+}
+
+.twcss-gap-16 {
+  gap: 4rem;
 }
 
 .twcss-gap-32 {
@@ -793,9 +908,29 @@ strong {
   gap: 2rem;
 }
 
+.twcss-gap-24 {
+  gap: 6rem;
+}
+
+.twcss-gap-4 {
+  gap: 1rem;
+}
+
+.twcss-gap-96 {
+  gap: 24rem;
+}
+
+.twcss-gap-40 {
+  gap: 10rem;
+}
+
+.twcss-gap-2 {
+  gap: 0.5rem;
+}
+
 .twcss-gap-x-8 {
   -moz-column-gap: 2rem;
-       column-gap: 2rem;
+  column-gap: 2rem;
 }
 
 .twcss-gap-y-10 {
@@ -806,6 +941,55 @@ strong {
   row-gap: 2rem;
 }
 
+.twcss-gap-x-6 {
+  -moz-column-gap: 1.5rem;
+  column-gap: 1.5rem;
+}
+
+.twcss-divide-x > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(1px * var(--tw-divide-x-reverse));
+  border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+}
+
+.twcss-divide-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(8px * var(--tw-divide-x-reverse));
+  border-left-width: calc(8px * calc(1 - var(--tw-divide-x-reverse)));
+}
+
+.twcss-divide-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(4px * var(--tw-divide-x-reverse));
+  border-left-width: calc(4px * calc(1 - var(--tw-divide-x-reverse)));
+}
+
+.twcss-divide-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-x-reverse: 0;
+  border-right-width: calc(2px * var(--tw-divide-x-reverse));
+  border-left-width: calc(2px * calc(1 - var(--tw-divide-x-reverse)));
+}
+
+.twcss-divide-y > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+
+.twcss-divide-terra > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(167 140 89 / var(--tw-divide-opacity));
+}
+
+.twcss-divide-wintermorgen > :not([hidden]) ~ :not([hidden]) {
+  --tw-divide-opacity: 1;
+  border-color: rgb(234 237 242 / var(--tw-divide-opacity));
+}
+
+.twcss-self-start {
+  align-self: flex-start;
+}
+
 .twcss-overflow-hidden {
   overflow: hidden;
 }
@@ -814,14 +998,87 @@ strong {
   border-radius: 0.75rem;
 }
 
+.twcss-border-r-2 {
+  border-right-width: 2px;
+}
+
+.twcss-border-l-2 {
+  border-left-width: 2px;
+}
+
+.twcss-border-r-terra {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(167 140 89 / var(--tw-border-opacity));
+}
+
+.twcss-border-r-wintermorgen {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(234 237 242 / var(--tw-border-opacity));
+}
+
+.twcss-border-l-wintermorgen {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(234 237 242 / var(--tw-border-opacity));
+}
+
+.twcss-bg-terra {
+  --tw-bg-opacity: 1;
+  background-color: rgb(167 140 89 / var(--tw-bg-opacity));
+}
+
+.twcss-bg-wintermorgen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 237 242 / var(--tw-bg-opacity));
+}
+
 .twcss-object-cover {
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
+}
+
+.twcss-p-16 {
+  padding: 4rem;
 }
 
 .twcss-py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.twcss-py-96 {
+  padding-top: 24rem;
+  padding-bottom: 24rem;
+}
+
+.twcss-py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.twcss-py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.twcss-py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.twcss-pl-0 {
+  padding-left: 0px;
+}
+
+.twcss-pr-0 {
+  padding-right: 0px;
+}
+
+.twcss-pr-16 {
+  padding-right: 4rem;
+}
+
+.twcss-pl-16 {
+  padding-left: 4rem;
 }
 
 .twcss-font-heading {
